[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "frontend"
path = "src/main.rs"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
web-sys = { version = "0.3", features = [
    "WebSocket",
    "MessageEvent",
    "Event",
    "ErrorEvent",
    "Location",
    "Window",
] }
wasm-bindgen = "0.2"
js-sys = "0.3"
